@@ -15,7 +15,7 @@ Collapsed=0
 
 [Window][Tools]
 Pos=24,-6
-Size=381,349
+Size=378,349
 Collapsed=0
 
 [Window][Example: Simple layout]
